# balamod

./: .gitignore  .lua_format  .npmrc  Cargo.toml  Makefile  One click install.cmd  README.md  all.txt  apis.index  new_repos.index  package.json  pnpm-lock.yaml  repos.index  vite.config.ts
.github/workflows/: doc.yaml  release.yml
balamod_lib/: Cargo.toml
balamod_lib/src/: balamod.rs  duration.rs  injector.rs  lib.rs
docs/: README.md  book.toml
docs/scripts/: CollectCommunityMods.py
docs/src/: SUMMARY.md  api-reference.md  community-mods.md  contributing.md  faq.md  getting-started.md  installation.md  introduction.md  mod-loading.md  modding-basics.md  ui-modding-basics.md  ui-modding-example.md
src/: app.html  balamod.rs  cli.rs  dependencies.rs  finder.rs  injector.rs  luas.rs  main.rs
src-old/: cli.rs  gui.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/dependencies/: assets.lua  balamod.lua  balamod_card.lua  balamod_game.lua  balamod_love.lua  balamod_misc_functions.lua  balamod_uidefs.lua  challenge.lua  console.lua  consumable.lua  https.lua  joker.lua  jokerapi.lua  localization.lua  logger.lua  logging.lua  mod.lua  mod_menu.lua  patches.lua  platform.lua  seal.lua  ssl.lua  tar.lua  utils.lua
src/lib/: interfaces.ts
src/luas/: mod_core.lua  mod_loader.lua
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/balatro/[index]/: +page.svelte  +page.ts
src/theme/: _smui-theme.scss
static/: smui-dark.css  smui.css
