[workspace]
members = [
    "balamod_lib",
]

[package]
name = "balamod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.5"
clap = { version = "4.4.11", features = ["derive"] }
colour = "0.7.0"
balamod_lib = { path = "balamod_lib" }


[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
