[package]
name = "balamod"
version = "0.1.11"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.5"
zip = "0.6.6"
clap = { version = "4.4.11", features = ["derive"] }
colour = "0.7.0"
libflate = "2.0.0"


[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"